--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,16 +19,17 @@ license = "MIT OR Apache-2.0"
 env_logger = "0.3"
 futures = "*"
 log = "0.3"
-mime = "0.2"
-mime_guess = "1.8"
+mime = "0.3"
+mime_guess = "2.0.0-alpha.1"
 rand = "0.3"
 tempdir = "0.3"
 
 hyper = { version = "0.11", optional = true }
+httparse = { version = "1.0", optional = true }
 twoway = { version = "*", optional = true }
 
 [features]
 client = []
 default = ["hyper", "server", "client"]
-server = ["twoway"]
+server = ["twoway", "httparse"]
 sse4 = ["twoway/pcmp"]
