--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ documentation = "http://cybergeek94.github.io/multipart-async/doc/multipart-asyn
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+display_bytes = "0.1"
 env_logger = "0.3"
 futures = "*"
 log = "0.3"
