--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tempdir = "0.3"
 
 hyper = { version = "0.11", optional = true }
 httparse = { version = "1.0", optional = true }
-twoway = { version = "*", optional = true }
+twoway = { version = "0.1", optional = true }
 
 [features]
 client = []
