--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 display_bytes = "0.1"
 env_logger = "0.3"
-futures = "*"
+futures = "0.1"
 log = "0.3"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.1"
