--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytes = "0.4.4"
 display_bytes = "0.1"
 env_logger = "0.3"
 futures = "0.1"
+http = "0.1.0"
 log = "0.3"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.1"
