--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,23 +17,23 @@ license = "MIT OR Apache-2.0"
 bytes = "0.4.4"
 display_bytes = "0.1"
 env_logger = "0.3"
-futures = "0.1"
+futures-preview = "0.3.0-alpha.18"
 http = "0.1.0"
 log = "0.3"
 mime = "0.3"
-mime_guess = "2.0.0-alpha.1"
+mime_guess = "2.0"
 rand = "0.3"
 tempdir = "0.3"
+pin-utils = "0.1.0-alpha.4"
 
-hyper = { version = "0.11", optional = true }
+hyper = { version = "0.12", optional = true }
 httparse = { version = "1.0", optional = true }
-twoway = { version = "0.1", optional = true }
+twoway = { version = "0.2", optional = true }
 
 [features]
 client = []
 default = ["hyper", "server", "client"]
 server = ["twoway", "httparse"]
-sse4 = ["twoway/pcmp"]
 # Use `Arc` instead of `Rc` where needed
 use_arc = []
 
