WIP updating to futures-preview (builds but no tests yet)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ twoway = { version = "0.2", optional = true }
 
 [features]
 client = []
-default = ["hyper", "server", "client"]
+default = ["server"]
 server = ["twoway", "httparse"]
 # Use `Arc` instead of `Rc` where needed
 use_arc = []
