--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ server = ["twoway", "httparse"]
 # Use `Arc` instead of `Rc` where needed
 use_arc = []
 
+[dev-dependencies]
+lazy_static = "1.3.0"
+
 [[bin]]
 name = "form_test"
 path = "bin/form_test.rs"
