get boundary::test::test_one_empty_field working, port to 2018 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ repository = "http://github.com/abonander/multipart-async"
 
 license = "MIT OR Apache-2.0"
 
+edition = "2018"
+
 [dependencies]
 bytes = "0.4.4"
 display_bytes = "0.1"
