--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,15 +32,21 @@ hyper = { version = "0.12", optional = true }
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.2", optional = true }
 
+futures-test-preview = { version = "0.3.0-alpha.18", optional = true }
+
 [features]
 client = []
 default = ["server"]
 server = ["twoway", "httparse"]
 # Use `Arc` instead of `Rc` where needed
 use_arc = []
+# Expose APIs used for fuzzing
+# Note: these APIs are not considered part of the public API and may break
+fuzzing = ["futures-test-preview"]
 
 [dev-dependencies]
 lazy_static = "1.3.0"
+futures-test-preview = "0.3.0-alpha.18"
 
 [[bin]]
 name = "form_test"
