--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ server = ["twoway", "httparse"]
 # Expose APIs used for fuzzing
 # Note: these APIs are not considered part of the public API and may break
 fuzzing = ["futures-test-preview"]
+async-await = ["futures-preview/async-await"]
 
 [dev-dependencies]
 lazy_static = "1.3.0"
