--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ edition = "2018"
 [dependencies]
 bytes = "0.4.4"
 display_bytes = "0.2.1"
-futures-preview = "0.3.0-alpha.18"
 http = "0.1.0"
 log = "0.4"
 mime = "0.3"
@@ -30,7 +29,11 @@ pin-utils = "0.1.0-alpha.4"
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.2", optional = true }
 
+futures-core-preview = "0.3.0-alpha.18"
+futures-util-preview = { version = "0.3.0-alpha.18", default-features = false, optional = true }
 futures-test-preview = { version = "0.3.0-alpha.18", optional = true }
+
+hyper = { version = "0.13.0-alpha.1", optional = true }
 
 [features]
 client = []
@@ -38,12 +41,14 @@ default = ["server"]
 server = ["twoway", "httparse"]
 # Expose APIs used for fuzzing
 # Note: these APIs are not considered part of the public API and may break
-fuzzing = ["futures-test-preview"]
-async-await = ["futures-preview/async-await"]
+fuzzing = ["futures-util-preview", "futures-test-preview"]
+async-await = []
 
 [dev-dependencies]
 lazy_static = "1.3.0"
+futures-preview = "0.3.0-alpha.18"
 futures-test-preview = "0.3.0-alpha.18"
+futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
 env_logger = "0.6.2"
 
 [[bin]]
