--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,7 @@ http = "0.1.0"
 log = "0.4"
 mime = "0.3"
 mime_guess = "2.0"
-rand = "0.3"
-tempdir = "0.3"
+# rand = "0.3"
 pin-utils = "0.1.0-alpha.4"
 
 httparse = { version = "1.0", optional = true }
@@ -51,7 +50,11 @@ futures-test-preview = "0.3.0-alpha.18"
 futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
 env_logger = "0.6.2"
 
-[[bin]]
-name = "form_test"
-path = "bin/form_test.rs"
+#[[bin]]
+#name = "form_test"
+#path = "bin/form_test.rs"
+#required-features = ["hyper", "server"]
+
+[[example]]
+name = "hyper-server"
 required-features = ["hyper", "server"]
