--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,11 +44,13 @@ fuzzing = ["futures-util-preview", "futures-test-preview"]
 async-await = []
 
 [dev-dependencies]
+hyper = "0.13.0-alpha.1"
 lazy_static = "1.3.0"
 futures-preview = "0.3.0-alpha.18"
 futures-test-preview = "0.3.0-alpha.18"
 futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
 env_logger = "0.6.2"
+curl = "0.4"
 
 #[[bin]]
 #name = "form_test"
@@ -58,3 +60,7 @@ env_logger = "0.6.2"
 [[example]]
 name = "hyper-server"
 required-features = ["hyper", "server"]
+
+[[test]]
+name = "curl-hyper"
+required-features = ["hyper", "server", "async-await"]
