add FIXMEs to uncomment channels in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: rust
 rust:
-#  - stable
-#  - beta
+#  - stable # FIXME: uncomment when 1.39 is released to stable on 2019-11-07
+#  - beta # FIXME: uncomment when 1.39 is released to beta on 2019-09-26
   - nightly
 os:
   - linux
