--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ async-await = []
 
 [dev-dependencies]
 hyper = "0.13.0-alpha.1"
+tokio = "0.2.0-alpha.4"
 lazy_static = "1.3.0"
 futures-preview = "0.3.0-alpha.18"
 futures-test-preview = "0.3.0-alpha.18"
