(failing) fill out curl-hyper test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,4 +64,4 @@ required-features = ["hyper", "server"]
 
 [[test]]
 name = "curl-hyper"
-required-features = ["hyper", "server", "async-await"]
+required-features = ["hyper", "server"]
