--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ http = "0.1.0"
 log = "0.4"
 mime = "0.3"
 mime_guess = "2.0"
-# rand = "0.3"
+rand = { versoin = "0.7", optional = true }
 pin-utils = "0.1.0-alpha.4"
 
 httparse = { version = "1.0", optional = true }
@@ -34,13 +34,15 @@ futures-test-preview = { version = "0.3.0-alpha.18", optional = true }
 
 hyper = { version = "0.13.0-alpha.1", optional = true }
 
+tokio-io = { version = "0.2.0-alpha.5", optional = true }
+
 # only used in integration testing; optional instead of dev dep so it doesn't require cURL
 # to be installed for all contributors
 curl = { version = "0.4", optional = true }
 
 [features]
-client = []
-default = ["server"]
+client = ["rand", "tokio-io"]
+default = ["client", "server"]
 server = ["twoway", "httparse"]
 # Expose APIs used for fuzzing
 # Note: these APIs are not considered part of the public API and may break
