--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ display_bytes = "0.2.1"
 http = "0.1.0"
 log = "0.4"
 mime = "0.3"
-mime_guess = "2.0"
+mime_guess = { version = "2.0", optional = true }
 rand = { versoin = "0.7", optional = true }
 pin-utils = "0.1.0-alpha.4"
 
@@ -35,13 +35,14 @@ futures-test-preview = { version = "0.3.0-alpha.18", optional = true }
 hyper = { version = "0.13.0-alpha.1", optional = true }
 
 tokio-io = { version = "0.2.0-alpha.5", optional = true }
+tokio-fs = { version = "0.2.0-alpha.5", optional = true }
 
 # only used in integration testing; optional instead of dev dep so it doesn't require cURL
 # to be installed for all contributors
 curl = { version = "0.4", optional = true }
 
 [features]
-client = ["rand", "tokio-io"]
+client = ["rand", "tokio-io", "mime_guess", "futures-util-preview"]
 default = ["client", "server"]
 server = ["twoway", "httparse"]
 # Expose APIs used for fuzzing
