--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,11 @@ pin-utils = "0.1.0-alpha.4"
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.2", optional = true }
 
-futures-core-preview = "0.3.0-alpha.18"
-futures-util-preview = { version = "0.3.0-alpha.18", default-features = false, optional = true }
-futures-test-preview = { version = "0.3.0-alpha.18", optional = true }
+futures-core-preview = "0.3.0-alpha.19"
+futures-util-preview = { version = "0.3.0-alpha.19", default-features = false, optional = true }
+futures-test-preview = { version = "0.3.0-alpha.19", optional = true }
 
-hyper = { version = "0.13.0-alpha.1", optional = true }
+hyper = { version = "0.13.0-alpha.4", optional = true, features = ["unstable-stream"] }
 
 tokio-io = { version = "0.2.0-alpha.5", optional = true }
 tokio-fs = { version = "0.2.0-alpha.5", optional = true }
