--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ license = "MIT OR Apache-2.0"
 
 edition = "2018"
 
+categories = ["web-programming::http-client", "web-programming::http-server", "asynchronous"]
+
 [dependencies]
 bytes = "0.4.4"
 display_bytes = "0.2.1"
