--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,17 +24,17 @@ http = "0.1.0"
 log = "0.4"
 mime = "0.3"
 mime_guess = { version = "2.0", optional = true }
-rand = { versoin = "0.7", optional = true }
+rand = { version = "0.7", optional = true }
 pin-utils = "0.1.0-alpha.4"
 
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.2", optional = true }
 
-futures-core-preview = "0.3.0-alpha.19"
-futures-util-preview = { version = "0.3.0-alpha.19", default-features = false, optional = true }
-futures-test-preview = { version = "0.3.0-alpha.19", optional = true }
+futures-core = "0.3.1"
+futures-util = { version = "0.3.1", default-features = false, optional = true }
+futures-test = { version = "0.3.1", optional = true }
 
-hyper = { version = "0.13.0-alpha.4", optional = true, features = ["unstable-stream"] }
+hyper = { git = "https://github.com/hyperium/hyper", rev = "71d088d", features = ["unstable-stream"], optional = true }
 
 tokio-io = { version = "0.2.0-alpha.5", optional = true }
 tokio-fs = { version = "0.2.0-alpha.5", optional = true }
@@ -44,20 +44,20 @@ tokio-fs = { version = "0.2.0-alpha.5", optional = true }
 curl = { version = "0.4", optional = true }
 
 [features]
-client = ["rand", "tokio-io", "mime_guess", "futures-util-preview"]
+client = ["rand", "tokio-io", "mime_guess", "futures-util"]
 default = ["client", "server"]
 server = ["twoway", "httparse"]
 # Expose APIs used for fuzzing
 # Note: these APIs are not considered part of the public API and may break
-fuzzing = ["futures-util-preview", "futures-test-preview"]
+fuzzing = ["futures-util", "futures-test"]
 
 [dev-dependencies]
-hyper = "0.13.0-alpha.1"
+hyper = { git = "https://github.com/hyperium/hyper", rev = "71d088d", features = ["unstable-stream"] }
 tokio = "0.2.0-alpha.4"
 lazy_static = "1.3.0"
-futures-preview = "0.3.0-alpha.18"
-futures-test-preview = "0.3.0-alpha.18"
-futures-util-preview = { version = "0.3.0-alpha.18", default-features = false }
+futures = "0.3.1"
+futures-test = "0.3.1"
+futures-util = { version = "0.3.1", default-features = false }
 env_logger = "0.6.2"
 
 #[[bin]]
