--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ http = "0.2"
 log = "0.4"
 mime = "0.3"
 mime_guess = { version = "2.0", optional = true }
-rand = { versoin = "0.7", optional = true }
+rand = { version = "0.7", optional = true }
 pin-utils = "0.1.0"
 
 httparse = { version = "1.0", optional = true }
