--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,45 +1,33 @@
 [package]
 name = "multipart-async"
-
-version = "0.0.2"
-
+version = "0.0.3"
 authors = ["Austin Bonander <austin.bonander@gmail.com>"]
-
 description = "A backend-agnostic extension for asynchronous HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."
-
 keywords = ["form-data", "hyper", "async", "http", "upload"]
-
 repository = "http://github.com/abonander/multipart-async"
-
 license = "MIT OR Apache-2.0"
-
 edition = "2018"
-
 categories = ["web-programming::http-client", "web-programming::http-server", "asynchronous"]
 
 [dependencies]
-bytes = "0.5"
+bytes = "1.0.1"
 display_bytes = "0.2.1"
-http = "0.2"
-log = "0.4"
-mime = "0.3"
-mime_guess = { version = "2.0", optional = true }
-rand = { version = "0.7", optional = true }
+futures-core = "0.3.14"
+futures-test = { version = "0.3.14", optional = true }
+futures-util = { version = "0.3.14", default-features = false, optional = true }
+http = "0.2.4"
+httparse = { version = "1.3.6", optional = true }
+hyper = { version = "0.14.5", optional = true, default-features = false, features = ["stream"] }
+log = "0.4.14"
+mime = "0.3.16"
+mime_guess = { version = "2.0.3", optional = true }
 pin-utils = "0.1.0"
-
-httparse = { version = "1.0", optional = true }
-twoway = { version = "0.2", optional = true }
-
-futures-core = "0.3.5"
-futures-util = { version = "0.3.5", default-features = false, optional = true }
-futures-test = { version = "0.3.5", optional = true }
-
-hyper = { version = "0.13.6", optional = true, default-features = false, features = ["stream"] }
-tokio = { version = "0.2.21", optional = true, default-features = false, features = ["io-util"] }
-
+rand = { version = "0.8.3", optional = true }
+tokio = { version = "1.4.0", optional = true, default-features = false, features = ["rt-multi-thread", "io-util"] }
+twoway = { version = "0.2.1", optional = true }
 # only used in integration testing; optional instead of dev dep so it doesn't require cURL
 # to be installed for all contributors
-curl = { version = "0.4", optional = true }
+curl = { version = "0.4.35", optional = true }
 
 [features]
 client = ["rand", "tokio", "mime_guess", "futures-util"]
@@ -50,17 +38,12 @@ server = ["twoway", "httparse"]
 fuzzing = ["futures-util", "futures-test"]
 
 [dev-dependencies]
-hyper = "0.13.6"
-lazy_static = "1.3.0"
-futures = "0.3.5"
-futures-test = "0.3.5"
-env_logger = "0.6.2"
-tokio = { version = "0.2.21", features = ["macros"] }
-
-#[[bin]]
-#name = "form_test"
-#path = "bin/form_test.rs"
-#required-features = ["hyper", "server"]
+hyper = "0.14.5"
+lazy_static = "1.4.0"
+futures = "0.3.14"
+futures-test = "0.3.14"
+env_logger = "0.8.3"
+tokio = { version = "1.4.0", features = ["macros"] }
 
 [[example]]
 name = "hyper-server"
