--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ futures-test = { version = "0.3.14", optional = true }
 futures-util = { version = "0.3.14", default-features = false, optional = true }
 http = "0.2.4"
 httparse = { version = "1.3.6", optional = true }
-hyper = { version = "0.14.5", optional = true, default-features = false, features = ["stream"] }
+hyper = { version = "0.14.5", optional = true, default-features = false, features = ["stream", "server"] }
 log = "0.4.14"
 mime = "0.3.16"
 mime_guess = { version = "2.0.3", optional = true }
@@ -27,7 +27,7 @@ tokio = { version = "1.4.0", optional = true, default-features = false, features
 twoway = { version = "0.2.1", optional = true }
 # only used in integration testing; optional instead of dev dep so it doesn't require cURL
 # to be installed for all contributors
-curl = { version = "0.4.35", optional = true }
+curl = { version = "0.4", optional = true }
 
 [features]
 client = ["rand", "tokio", "mime_guess", "futures-util"]
@@ -38,7 +38,7 @@ server = ["twoway", "httparse"]
 fuzzing = ["futures-util", "futures-test"]
 
 [dev-dependencies]
-hyper = "0.14.5"
+hyper = { version = "0.14.5", features = ["server", "http1", "tcp"] }
 lazy_static = "1.4.0"
 futures = "0.3.14"
 futures-test = "0.3.14"
